@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.1269 2010-08-06 13:02:42 martin Exp $
+# $Id: CHANGES,v 1.1270 2010-08-06 14:53:51 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,10 @@
 # --
 
 3.0.0 beta2 (2010/??/??)
+ - (2010/08/06) Fixed bug#5628 - In new Ticket Search, the attribute
+    TicketCreateTime, Wording is wrong + Checkbox is not longer needed.
+ - (2010/08/06) Fixed bug#5645 - Changing the ticket search options does not
+    work.
  - (2010/08/06) Fixed bug#5627 - "Fulltext" attribute in new ticket search
     feature is missing on initial use.
  - (2010/08/06) Fixed bug#5663 - In Global Ticket Overview, in M+L Mode, orange
